--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -8,12 +8,14 @@
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="css/public.css"/>
     <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <link rel="stylesheet" type="text/css" href="home.css" />
 </head>
 <body>
 
 </body>
 </html>
 <script type="text/javascript" src="js/rem.js"></script>
-<script type="text/javascript"src="js/swiper-3.4.0.min.js"></script>
 <script type="text/javascript" src="js/zepto.js"></script>
+<script type="text/javascript"src="js/swiper-3.4.0.min.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript" src="home.js"></script>
