--- a/pages/shujia/shujia.html
+++ b/pages/shujia/shujia.html
@@ -4,9 +4,17 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" >
     <meta charset="UTF-8" />
     <title>书架</title>
+    <link rel="stylesheet" type="text/css" href="../../css/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="../../css/swiper-3.4.0.min.css" />
     <link rel="stylesheet" type="text/css" href="shujia.css" />
 </head>
 <body>
-    <div class="container"></div>
+    <div class="container">
+        
+    </div>
 </body>
+<script type="text/javascript" src="../../js/rem.js"></script>
+<script type="text/javascript" src="../../js/zepto.js"></script>
+<script type="text/javascript" src="../../js/swiper-3.4.0.min.js"></script>
+<script type="text/javascript" src="shujia.js"></script>
 </html>
