--- a/pages/shujia/shujia.html
+++ b/pages/shujia/shujia.html
@@ -5,12 +5,26 @@
     <meta charset="UTF-8" />
     <title>书架</title>
     <link rel="stylesheet" type="text/css" href="../../css/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="../../css/public.css" />
     <link rel="stylesheet" type="text/css" href="../../css/swiper-3.4.0.min.css" />
     <link rel="stylesheet" type="text/css" href="shujia.css" />
 </head>
 <body>
-    <div class="container">
-        
+    <!-- 书架-发现 -->
+    <div class="zlf_container">
+        <div class="zlf_find">
+            <div class="zlf_find_title">
+                开始滑动发现你所喜欢的
+            </div>
+            <img src="../../images/zlf_images/zlf_find.png" alt="" />
+        </div>
+        <div class="swiper-container">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">slider1</div>
+            <div class="swiper-slide">slider2</div>
+            <div class="swiper-slide">slider3</div>
+          </div>
+        </div>
     </div>
 </body>
 <script type="text/javascript" src="../../js/rem.js"></script>
