--- a/pages/shujia/shujia.html
+++ b/pages/shujia/shujia.html
@@ -12,19 +12,79 @@
 <body>
     <!-- 书架-发现 -->
     <div class="zlf_container">
+        <!-- 头 开始 -->
+        <div class="zlf_top">
+            
+        </div>
+        <!-- 头 结束 -->
+        <!-- find 开始-->
         <div class="zlf_find">
             <div class="zlf_find_title">
                 开始滑动发现你所喜欢的
             </div>
-            <img src="../../images/zlf_images/zlf_find.png" alt="" />
+            <img class="zlf_find_tu" src="../../images/zlf_images/zlf_find.png"  alt="" />
         </div>
-        <div class="swiper-container">
+        <!-- find 结束 -->
+        <!-- 固定的2个白矩形 开始-->
+        <div class="zlf_fixed1"></div>
+        <div class="zlf_fixed2"></div>
+        <!-- 固定的2个白矩形 -->
+
+        <!-- swiper 开始 -->
+        <div class="swiper-container zlf_swiper-container">
           <div class="swiper-wrapper">
-            <div class="swiper-slide">slider1</div>
-            <div class="swiper-slide">slider2</div>
-            <div class="swiper-slide">slider3</div>
+            <div class="swiper-slide zlf_item">
+                <div class="zlf_cover">
+                    <img class="zlf_book"src="../../images/zlf_images/zlf_book.png" alt="" />
+                    <!-- 头像 -->
+                    <div class="zlf_photo">
+                        <img src="../../images/zlf_images/zlf_book.png">
+                    </div>
+                    <!-- 姓名 -->
+                    <span class="zlf_name">JimGreen</span>
+                    <!-- 点 -->
+                    <div class="zlf_dian_box">
+                        <img class="zlf_dian"src="../../images/zlf_images/zlf_dian.png" alt="" />
+                    </div>
+                    <!-- 五角星 -->
+                    <div class="zlf_xing_box">
+                        <img src="../../images/zlf_images/zlf_xing.png" alt="" />
+                        <img src="../../images/zlf_images/zlf_xing.png" alt="" />
+                        <img src="../../images/zlf_images/zlf_xing.png" alt="" />
+                        <img src="../../images/zlf_images/zlf_xing.png" alt="" />
+                    </div>
+                    <!-- 火 -->
+                    <div class="zlf_huo_box">
+                        <img src="../../images/zlf_images/zlf_huo.png" alt="" />
+                        <i>388</i>
+                    </div>
+                </div>
+                <div class="zlf_msg">
+                    <div class="zlf_time_box">
+                        <img class="zlf_time_tu" src="../../images/zlf_images/zlf_sj.png" alt="" />
+                        <span>2016/12/29</span>
+                    </div>
+                    <div class="zlf_tuijian_box">
+                        <span class="zlf_span zlf_span1">GENTL</span>
+                        <span class="zlf_span zlf_span2">YTOUCH</span>
+                        <img class="zlf_tuijian_tu" src="../../images/zlf_images/zlf_tuijian.png" alt="" />
+                    </div>
+                    <div class="zlf_line"></div>
+                    <p class="zlf_dec">
+                        卡就废了大家佛奥及覅偶将诶欧方佳偶的假发讲课了解放路看房卡大富科技...
+                    </p>
+                    <div class="zlf_time_box">
+                        <img class="zlf_time_tu" src="../../images/zlf_images/zlf_dizhi.png" alt="" />
+                        <span class="zlf_address">美国·纽约</span>
+                    </div>
+                    <div class="zlf_people">
+                        <img src="../../images/ld_bg.png" alt="" />
+                    </div>
+                </div>
+            </div>
           </div>
         </div>
+        <!-- swiper 结束 -->
     </div>
 </body>
 <script type="text/javascript" src="../../js/rem.js"></script>
