--- a/pages/shujia/shujia.html
+++ b/pages/shujia/shujia.html
@@ -6,12 +6,11 @@
     <title>书架</title>
     <link rel="stylesheet" type="text/css" href="../../css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="../../css/public.css" />
-    <link rel="stylesheet" type="text/css" href="../../css/swiper-3.4.0.min.css" />
     <link rel="stylesheet" type="text/css" href="shujia.css" />
 </head>
 <body>
-    <!-- 书架-发现 -->
-    <div class="zlf_container">
+    <!-- 书架-发现 开始-->
+    <div class="zlf_container" hidden>
         <!-- 头 开始 -->
         <div class="zlf_top">
             
@@ -25,17 +24,12 @@
             <img class="zlf_find_tu" src="../../images/zlf_images/zlf_find.png"  alt="" />
         </div>
         <!-- find 结束 -->
-        <!-- 固定的2个白矩形 开始-->
-        <div class="zlf_fixed1"></div>
-        <div class="zlf_fixed2"></div>
-        <!-- 固定的2个白矩形 -->
-
         <!-- swiper 开始 -->
         <div class="swiper-container zlf_swiper-container">
           <div class="swiper-wrapper">
             <div class="swiper-slide zlf_item">
                 <div class="zlf_cover">
-                    <img class="zlf_book"src="../../images/zlf_images/zlf_book.png" alt="" />
+                    <img class="zlf_book1"src="../../images/zlf_images/zlf_book.png" alt="" />
                     <!-- 头像 -->
                     <div class="zlf_photo">
                         <img src="../../images/zlf_images/zlf_book.png">
@@ -77,8 +71,23 @@
                         <img class="zlf_time_tu" src="../../images/zlf_images/zlf_dizhi.png" alt="" />
                         <span class="zlf_address">美国·纽约</span>
                     </div>
-                    <div class="zlf_people">
-                        <img src="../../images/ld_bg.png" alt="" />
+                    <div class="zlf_people zlf_people1">
+                        <img src="../../images/mjh/sy-mjh_54.png" alt="" />
+                    </div>
+                    <div class="zlf_people zlf_people2">
+                        <img src="../../images/mjh/sy-mjh_73.png" alt="" />
+                    </div>
+                     <div class="zlf_people zlf_people3">
+                        <img src="../../images/mjh/sy-mjh_54.png" alt="" />
+                    </div>
+                    <div class="zlf_people zlf_people4">
+                        <img src="../../images/mjh/sy-mjh_73.png" alt="" />
+                    </div>
+                    <div class="zlf_people zlf_people5">
+                        <img src="../../images/mjh/sy-mjh_54.png" alt="" />
+                    </div>
+                    <div class="zlf_people zlf_people6">
+                       +46
                     </div>
                 </div>
             </div>
@@ -86,9 +95,152 @@
         </div>
         <!-- swiper 结束 -->
     </div>
+    <!-- 书架-发现 结束-->
+    <!-- 书架-收藏 开始-->
+    <div class="zlf_container">
+        <div class="zlf_book_box">
+            <div class="zlf_book_item">
+                <div class="zlf_book">
+                    <img src="../../images/mjh/sy-mjh_27.png" alt="" />
+                    <div class="zlf_yuan zlf_yuan1"></div>
+                    <div class="zlf_yuan zlf_yuan2"></div>
+                </div>
+                <div class="zlf_book_msg">
+                    <div class="zlf_book_name">
+                        基督山伯爵
+                    </div>
+                    <div class="zlf_book_name2">
+                        THE COUNT OF MONTE CRISTO
+                    </div>
+                    <div class="zlf_wjx">
+                        <!-- 五角星 -->
+                        <div class="zlf_x_box">
+                            <img src="../../images/mjh/sy-mjh_31.png" alt="" />
+                            <img src="../../images/mjh/sy-mjh_31.png" alt="" />
+                            <img src="../../images/mjh/sy-mjh_31.png" alt="" />
+                            <img src="../../images/mjh/sy-mjh_31.png" alt="" />
+                            <img src="../../images/mjh/sy-mjh_31.png" alt="" />
+                        </div>
+                        <div class="zlf_author">
+                            DUMAS
+                        </div>
+                    </div>
+                    <div class="zlf_bg">
+                        <img class="zlf_bg_tu" src="../../images/zlf_images/zlf_bg.png" alt="" />
+                        <div class="zlf_sc">
+                            <img src="../../images/mjh/sy-mjh_35.png" height="19" width="20" alt="" />
+                        </div>
+                        <div class="zlf_gz">
+                            <img src="../../images/mjh/sy-mjh_38.png" height="19" width="20" alt="" />
+                            <span>234</span>
+                        </div>
+                        <div class="zlf_dz">
+                            <img src="../../images/mjh/sy-mjh_40.png" height="19" width="20" alt="" />
+                            <span>666</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="zlf_book_item">
+                <div class="zlf_book">
+                    <img src="../../images/mjh/sy-mjh_27.png" alt="" />
+                    <div class="zlf_yuan zlf_yuan1"></div>
+                    <div class="zlf_yuan zlf_yuan2"></div>
+                </div>
+                <div class="zlf_book_msg">
+                    <div class="zlf_book_name">
+                        基督山伯爵
+                    </div>
+                    <div class="zlf_book_name2">
+                        THE COUNT OF MONTE CRISTO
+                    </div>
+                    <div class="zlf_wjx">
+                        <!-- 五角星 -->
+                        <div class="zlf_x_box">
+                            <img src="../../images/mjh/sy-mjh_31.png" alt="" />
+                            <img src="../../images/mjh/sy-mjh_31.png" alt="" />
+                            <img src="../../images/mjh/sy-mjh_31.png" alt="" />
+                            <img src="../../images/mjh/sy-mjh_31.png" alt="" />
+                            <img src="../../images/mjh/sy-mjh_31.png" alt="" />
+                        </div>
+                        <div class="zlf_author">
+                            DUMAS
+                        </div>
+                    </div>
+                    <div class="zlf_bg">
+                        <img class="zlf_bg_tu" src="../../images/zlf_images/zlf_bg.png" alt="" />
+                        <div class="zlf_sc">
+                            <img src="../../images/mjh/sy-mjh_35.png" height="19" width="20" alt="" />
+                        </div>
+                        <div class="zlf_gz">
+                            <img src="../../images/mjh/sy-mjh_38.png" height="19" width="20" alt="" />
+                            <span>234</span>
+                        </div>
+                        <div class="zlf_dz">
+                            <img src="../../images/mjh/sy-mjh_40.png" height="19" width="20" alt="" />
+                            <span>666</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="zlf_book_item">
+                <div class="zlf_book">
+                    <img src="../../images/mjh/sy-mjh_27.png" alt="" />
+                    <div class="zlf_yuan zlf_yuan1"></div>
+                    <div class="zlf_yuan zlf_yuan2"></div>
+                </div>
+                <div class="zlf_book_msg">
+                    <div class="zlf_book_name">
+                        基督山伯爵
+                    </div>
+                    <div class="zlf_book_name2">
+                        THE COUNT OF MONTE CRISTO
+                    </div>
+                    <div class="zlf_wjx">
+                        <!-- 五角星 -->
+                        <div class="zlf_x_box">
+                            <img src="../../images/mjh/sy-mjh_31.png" alt="" />
+                            <img src="../../images/mjh/sy-mjh_31.png" alt="" />
+                            <img src="../../images/mjh/sy-mjh_31.png" alt="" />
+                            <img src="../../images/mjh/sy-mjh_31.png" alt="" />
+                            <img src="../../images/mjh/sy-mjh_31.png" alt="" />
+                        </div>
+                        <div class="zlf_author">
+                            DUMAS
+                        </div>
+                    </div>
+                    <div class="zlf_bg">
+                        <img class="zlf_bg_tu" src="../../images/zlf_images/zlf_bg.png" alt="" />
+                        <div class="zlf_sc">
+                            <img src="../../images/mjh/sy-mjh_35.png" height="19" width="20" alt="" />
+                        </div>
+                        <div class="zlf_gz">
+                            <img src="../../images/mjh/sy-mjh_38.png" height="19" width="20" alt="" />
+                            <span>234</span>
+                        </div>
+                        <div class="zlf_dz">
+                            <img src="../../images/mjh/sy-mjh_40.png" height="19" width="20" alt="" />
+                            <span>666</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- 想看新书了，逛逛看 -->
+        <div class="zlf_close_box">
+            <div class="zlf_English">STACK_ROOM</div>
+            <div class="zlf_Chinese">想看新书了，去逛逛看</div>
+            <div class="zlf_close_btn">
+                <img src="../../images/zlf_images/zlf_close.png" alt="" />
+            </div>
+            <div class="zlf_go">
+                <img src="../../images/zlf_images/zlf_go.png" alt="" />
+            </div>
+        </div>
+    </div>
+    <!-- 书架-收藏 结束-->
 </body>
 <script type="text/javascript" src="../../js/rem.js"></script>
 <script type="text/javascript" src="../../js/zepto.js"></script>
-<script type="text/javascript" src="../../js/swiper-3.4.0.min.js"></script>
 <script type="text/javascript" src="shujia.js"></script>
 </html>
