--- a/pages/login/yhp_loginland/yhp_login_land.html
+++ b/pages/login/yhp_loginland/yhp_login_land.html
@@ -14,7 +14,9 @@
 	<div class="yhp_loginland_box">
 		<!-- 登录界面內宽开始 -->
 			<div class="yhp_loginland_inner">
-				
+				<div class="yhp_loginlandup">
+					
+				</div>
 			</div>
 		<!-- 登录界面內宽结束 -->
 	</div>
