--- a/pages/friend/friend.html
+++ b/pages/friend/friend.html
@@ -106,7 +106,11 @@
 <!-- 最新动态 -->
     <div class="sy_news">
         <div class="sy_fcaption">
-        <!-- 标题 引用马锦慧 首页 的标题-->    
+        <!-- 标题 引用马锦慧 首页 的标题--> 
+        <div class="sy_sy-bt">
+            <p class="sy_sy-bty">recent news</p>
+            <div class="sy_su-div"><img src="../../images/sy_images/sy_xiaoren.png" alt="" class="sy_su-btt" /><span class="sy_sy-bth">最新动态</span></div>
+        </div>   
         </div>
         <div class="sy_news_content">
             <ul class="sy_news_left">
@@ -126,7 +130,11 @@
                         <p>公寓里的五个人，每个人都有自己的故事，互相遇见碰撞摩擦，发现彼此的优点，互相欣赏...</p>    
                     </div>
                     <div class="sy_fshare">
-                    <!-- 收藏 引用李丹 -->    
+                    <!-- 收藏 引用李丹 --> 
+                        <ul class="ld_dizhi_rig">
+                            <li><div class="ld_dizhi_num">230</div><span class="ld_dizhi_icon1"></span></li>
+                            <li><div class="ld_dizhi_num">230</div><span class="ld_dizhi_icon2"></span></li>
+                        </ul>   
                     </div>
                 </div>
             </div>    
