--- a/pages/shequ/shequ.html
+++ b/pages/shequ/shequ.html
@@ -26,7 +26,7 @@
         <!-- 社会圈子下面内容开始 -->
         <div class="ld_qz_condi">
                 <!-- 社会圈子 -->
-            <!-- <div class="ld_qz_con">
+            <div class="ld_qz_con">
                 <div class="ld_qz_contop">
                     <img src="../../images/ld_images/ld_sq_lis01.png" alt="" />
                     <div class="ld_qz_label">
@@ -73,7 +73,7 @@
                         </ul>
                     </div>
                 </div>
-            </div> -->
+            </div>
                 <!-- 社会书友 -->
             <div class="ld_shuyou">
                 <div class="ld_sy_photo"><img src="../../images/ld_images/ld_photo01.png" alt="" /></div>
