--- a/pages/bookcover/gl_bookcover.html
+++ b/pages/bookcover/gl_bookcover.html
@@ -113,6 +113,64 @@
                 <i></i>
                 <span>同类推荐</span>
             </div>
+            <div class="gl_tltjcon">
+                <ul>
+                    <li>
+                        <div class="gl_tl_nn gl_clearfix">
+                            <div class="gl_nnleft">
+                                <img src="../../images/gl_images/1.jpg"alt="" />
+                            </div>
+                            <div class="gl_nnright">
+                                <div class="gl_nntop">
+                                    <h1>轻触</h1>
+                                    <h2>Tickle</h2>
+                                     <h3>詹姆斯·李瑞淳</h3>
+                                    <img src="../../images/gl_images/tx.png" alt="" />
+                                    <div class="gl_star">
+                                        <div class="gl_star1"></div>
+                                        <div class="gl_star1"></div>
+                                        <div class="gl_star1"></div>
+                                        <div class="gl_star1"></div>
+                                        <div class="gl_star1"></div>
+                                    </div>
+                                </div>
+                                <div class="gl_nnbottom">
+                                    <p>轻轻触碰，是指尖温度的传递，是两个灵魂的颤栗，是岁月的倾述... </p>
+                                    <div class="gl_zz"></div>
+                                    <div class="gl_plpl"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="gl_tl_nn gl_clearfix">
+                            <div class="gl_nnleft">
+                                <img src="../../images/gl_images/1.jpg"alt="" />
+                            </div>
+                            <div class="gl_nnright">
+                                <div class="gl_nntop">
+                                    <h1>轻触</h1>
+                                    <h2>Tickle</h2>
+                                     <h3>詹姆斯·李瑞淳</h3>
+                                    <img src="../../images/gl_images/tx.png" alt="" />
+                                    <div class="gl_star">
+                                        <div class="gl_star1"></div>
+                                        <div class="gl_star1"></div>
+                                        <div class="gl_star1"></div>
+                                        <div class="gl_star1"></div>
+                                        <div class="gl_star1"></div>
+                                    </div>
+                                </div>
+                                <div class="gl_nnbottom">
+                                    <p>轻轻触碰，是指尖温度的传递，是两个灵魂的颤栗，是岁月的倾述... </p>
+                                    <div class="gl_zz"></div>
+                                    <div class="gl_plpl"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
         <!-- 同类推荐 -->
     </div>
