--- a/pages/person/person.html
+++ b/pages/person/person.html
@@ -35,7 +35,9 @@
 <!-- 好友主页的轮播块 -->
     <ul class="sy_pluul">
     	<li class="sy_pluli">
-    		<div class="sy_pluli_img"></div>
+    		<div class="sy_pluli_img">
+                <img src="../../images/sy_images/sy_mjh_2.png" alt="">      
+            </div>
     		<div class="sy_pluli_right">
     			<div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
     			<p class="sy_pluli_p">收藏书籍</p>
@@ -43,7 +45,9 @@
     		</div>
     	</li>
     	<li class="sy_pluli">
-    		<div class="sy_pluli_img"></div>
+    		<div class="sy_pluli_img">
+                <img src="../../images/sy_images/sy_mjh_2.png" alt="">
+            </div>
     		<div class="sy_pluli_right">
     			<div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
     			<p class="sy_pluli_p">我的关注</p>
@@ -51,7 +55,9 @@
     		</div>
     	</li>
     	<li class="sy_pluli">
-    		<div class="sy_pluli_img"></div>
+    		<div class="sy_pluli_img">
+                <img src="../../images/sy_images/sy_mjh_2.png" alt="">      
+            </div>
     		<div class="sy_pluli_right">
     			<div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
     			<p class="sy_pluli_p">我的粉丝</p>
@@ -59,7 +65,9 @@
     		</div>
     	</li>
     	<li class="sy_pluli">
-    		<div class="sy_pluli_img"></div>
+    		<div class="sy_pluli_img">
+                <img src="../../images/sy_images/sy_mjh_2.png" alt="">      
+            </div>
     		<div class="sy_pluli_right">
     			<div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
     			<p class="sy_pluli_p">我的动态</p>
@@ -67,7 +75,9 @@
     		</div>
     	</li>
     	<li class="sy_pluli">
-    		<div class="sy_pluli_img"></div>
+    		<div class="sy_pluli_img">
+                <img src="../../images/sy_images/sy_mjh_2.png" alt="">      
+            </div>
     		<div class="sy_pluli_right">
     			<div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
     			<p class="sy_pluli_p">编辑设置</p>
@@ -75,7 +85,9 @@
     		</div>
     	</li>
     	<li class="sy_pluli">
-    		<div class="sy_pluli_img"></div>
+    		<div class="sy_pluli_img">
+                <img src="../../images/sy_images/sy_mjh_2.png" alt="">      
+            </div>
     		<div class="sy_pluli_right">
     			<div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
     			<p class="sy_pluli_p">个性装扮</p>
@@ -83,7 +95,9 @@
     		</div>
     	</li>
     	<li class="sy_pluli">
-    		<div class="sy_pluli_img"></div>
+    		<div class="sy_pluli_img">
+                <img src="../../images/sy_images/sy_mjh_2.png" alt="">      
+            </div>
     		<div class="sy_pluli_right">
     			<div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
     			<p class="sy_pluli_p">会员中心</p>
@@ -91,7 +105,9 @@
     		</div>
     	</li>
     	<li class="sy_pluli">
-    		<div class="sy_pluli_img"></div>
+    		<div class="sy_pluli_img">
+                <img src="../../images/sy_images/sy_mjh_2.png" alt="">      
+            </div>
     		<div class="sy_pluli_right">
     			<div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
     			<p class="sy_pluli_p">消息通知</p>
