--- a/pages/friend/friend.html
+++ b/pages/friend/friend.html
@@ -35,73 +35,98 @@
     </div>
 <!-- --好友主页 独立部分 开始-- -->
 <!-- 好友主页的轮播块 -->
-    <div class="sy_pluul_box">
-        <ul class="sy_pluul">
-            <li class="sy_pluli">
-                <div class="sy_pluli_img"></div>
-                <div class="sy_pluli_right">
-                    <div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
-                    <p class="sy_pluli_p">收藏书籍</p>
-                    <span class="sy_san_dian">···</span>
-                </div>
-            </li>
-            <li class="sy_pluli">
-                <div class="sy_pluli_img"></div>
-                <div class="sy_pluli_right">
-                    <div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
-                    <p class="sy_pluli_p">我的关注</p>
-                    <span class="sy_san_dian">···</span>
-                </div>
-            </li>
-            <li class="sy_pluli">
-                <div class="sy_pluli_img"></div>
-                <div class="sy_pluli_right">
-                    <div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
-                    <p class="sy_pluli_p">我的粉丝</p>
-                    <span class="sy_san_dian">···</span>
-                </div>
-            </li>
-            <li class="sy_pluli">
-                <div class="sy_pluli_img"></div>
-                <div class="sy_pluli_right">
-                    <div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
-                    <p class="sy_pluli_p">我的动态</p>
-                    <span class="sy_san_dian">···</span>
-                </div>
-            </li>
-            <li class="sy_pluli">
-                <div class="sy_pluli_img"></div>
-                <div class="sy_pluli_right">
-                    <div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
-                    <p class="sy_pluli_p">编辑设置</p>
-                    <span class="sy_san_dian">···</span>
-                </div>
-            </li>
-            <li class="sy_pluli">
-                <div class="sy_pluli_img"></div>
-                <div class="sy_pluli_right">
-                    <div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
-                    <p class="sy_pluli_p">个性装扮</p>
-                    <span class="sy_san_dian">···</span>
-                </div>
-            </li>
-            <li class="sy_pluli">
-                <div class="sy_pluli_img"></div>
-                <div class="sy_pluli_right">
-                    <div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
-                    <p class="sy_pluli_p">会员中心</p>
-                    <span class="sy_san_dian">···</span>
-                </div>
-            </li>
-            <li class="sy_pluli">
-                <div class="sy_pluli_img"></div>
-                <div class="sy_pluli_right">
-                    <div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
-                    <p class="sy_pluli_p">消息通知</p>
-                    <span class="sy_san_dian">···</span>
-                </div>
-            </li>
-        </ul>    
+    <div class="sy_pluul_box swiper-container swiper-container-horizontal">
+        <div class="swiper-wrapper">
+            <ul class="sy_pluul swiper-slide">
+                <li class="sy_pluli">
+                    <div class="sy_pluli_img">
+                        <img src="../../images/sy_images/sy_mjh_1.png" alt="">
+                    </div>
+                    <div class="sy_pluli_right">
+                        <div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
+                        <p class="sy_pluli_p">收藏书籍</p>
+                        <span class="sy_san_dian">···</span>
+                    </div>
+                </li>
+                <li class="sy_pluli">
+                    <div class="sy_pluli_img">
+                        <img src="../../images/sy_images/sy_mjh_2.png" alt="">
+                    </div>
+                    <div class="sy_pluli_right">
+                        <div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
+                        <p class="sy_pluli_p">我的关注</p>
+                        <span class="sy_san_dian">···</span>
+                    </div>
+                </li>
+            </ul>    
+            <ul class="sy_pluul swiper-slide">
+                <li class="sy_pluli swiper-slide">
+                    <div class="sy_pluli_img">
+                        <img src="../../images/sy_images/sy_mjh_2.png" alt="">
+                    </div>
+                    <div class="sy_pluli_right">
+                        <div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
+                        <p class="sy_pluli_p">我的粉丝</p>
+                        <span class="sy_san_dian">···</span>
+                    </div>
+                </li>
+                <li class="sy_pluli swiper-slide">
+                    <div class="sy_pluli_img">
+                        <img src="../../images/sy_images/sy_mjh_2.png" alt="">
+                    </div>
+                    <div class="sy_pluli_right">
+                        <div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
+                        <p class="sy_pluli_p">我的动态</p>
+                        <span class="sy_san_dian">···</span>
+                    </div>
+                </li>
+            </ul>
+            <ul class="sy_pluul swiper-slide">
+                <li class="sy_pluli swiper-slide">
+                    <div class="sy_pluli_img">
+                        <img src="../../images/sy_images/sy_mjh_2.png" alt="">
+                    </div>
+                    <div class="sy_pluli_right">
+                        <div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
+                        <p class="sy_pluli_p">编辑设置</p>
+                        <span class="sy_san_dian">···</span>
+                    </div>
+                </li>
+                <li class="sy_pluli swiper-slide">
+                    <div class="sy_pluli_img">
+                        <img src="../../images/sy_images/sy_mjh_2.png" alt="">
+                    </div>
+                    <div class="sy_pluli_right">
+                        <div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
+                        <p class="sy_pluli_p">个性装扮</p>
+                        <span class="sy_san_dian">···</span>
+                    </div>
+                </li>
+            </ul>
+            <ul class="sy_pluul swiper-slide">
+                <li class="sy_pluli swiper-slide">
+                    <div class="sy_pluli_img">
+                        <img src="../../images/sy_images/sy_mjh_2.png" alt="">
+                    </div>
+                    <div class="sy_pluli_right">
+                        <div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
+                        <p class="sy_pluli_p">会员中心</p>
+                        <span class="sy_san_dian">···</span>
+                    </div>
+                </li>
+                <li class="sy_pluli swiper-slide">
+                    <div class="sy_pluli_img">
+                        <img src="../../images/sy_images/sy_mjh_2.png" alt="">
+                    </div>
+                    <div class="sy_pluli_right">
+                        <div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
+                        <p class="sy_pluli_p">消息通知</p>
+                        <span class="sy_san_dian">···</span>
+                    </div>
+                </li>
+            </ul>    
+        </div>
+        <div class="swiper-pagination"></div>
     </div>
 <!-- 最新动态 -->
     <div class="sy_news">
@@ -151,4 +176,6 @@
 <script type="text/javascript" src="../../js/rem.js"></script>
 <script type="text/javascript"src="../../js/swiper-3.4.0.min.js"></script>
 <script type="text/javascript" src="../../js/zepto.js"></script>
+<script type="text/javascript" src="../../js/touch.js"></script>
 <script src="../../index.js"></script>
+<script src="friend.js"></script>
