--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -1,27 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" >
-    <title>爱阅读app</title>
-    <link rel="stylesheet" type="text/css" href="../../css/swiper-3.4.0.min.css" />
-    <link rel="stylesheet" type="text/css" href="../../css/normalize.css" />
-    <link rel="stylesheet" type="text/css" href="../../css/public.css"/>
-    <link rel="stylesheet" type="text/css" href="../../css/index.css" />
-    <link rel="stylesheet" type="text/css" href="home.css" />
-</head>
-<body>
+
     <!-- 头部 -->
     <div class="mjh_header">
-        <a href="##" class="mjh_yhtx"><img src="../../images/mjh/sy-mjh_03.png" alt="" /></a>
-        <a href="##" class="mjh_logo"><img src="../../images/mjh/sy-mjh_05.png" alt="" /></a>
-        <a href="##" class="mjh_sousuo"><img src="../../images/mjh/sy-mjh_08.png" alt="" /></a>
+        <a href="##" class="mjh_yhtx"><img src="images/mjh/sy-mjh_03.png" alt="" /></a>
+        <a href="##" class="mjh_logo"><img src="images/mjh/sy-mjh_05.png" alt="" /></a>
+        <a href="##" class="mjh_sousuo"><img src="images/mjh/sy-mjh_08.png" alt="" /></a>
     </div>
     <!-- banner -->
     <div class="mjh_banner swiper-container swiper-container-horizontal">
         <div class="swiper-wrapper">
-            <div class="swiper-slide"><img src="../../images/mjh/sy-mjh_.png" alt="" /></div>
-            <div class="swiper-slide"><img src="../../images/mjh/sy-mjh_12.png" alt="" /></div>
+            <div class="swiper-slide"><img src="images/mjh/sy-mjh_.png" alt="" /></div>
+            <div class="swiper-slide"><img src="images/mjh/sy-mjh_12.png" alt="" /></div>
         </div>
         <!-- Add Pagination -->
         <div class="swiper-pagination"></div>
@@ -31,13 +19,13 @@
     <!-- 书荒大解救 -->
     <div class="mjh-sy-bt">
         <p class="mjh-sy-bty">BOOK WILD BIG RESCUE</p>
-        <div><img src="../../images/mjh/sy-mjh_50.png" alt="" class="mjh-su-btt" /><span class="mjt-sy-bth">书荒大解救</span></div>
+        <div><img src="images/mjh/sy-mjh_50.png" alt="" class="mjh-su-btt" /><span class="mjt-sy-bth">书荒大解救</span></div>
         <a href="##" class="mjh-sy-btgd">更多</a>
     </div>
     <div class="mjh-sh-wkw">
     <div class="mjh-sh-wk">
         <div class="mjh-sh-qu">
-            <img src="../../images/mjh/sy-mjh_54.png" alt="" class="mjh-sh-fm" />
+            <img src="images/mjh/sy-mjh_54.png" alt="" class="mjh-sh-fm" />
             <p class="mjh-sh-smy">the three musketeers</p>
             <a href="##" class="mjh-sh-sm">三个火枪手是法国作家...</a>
             <span class="mjh-sh-wj">[已完结]</span>
@@ -46,15 +34,15 @@
                 <span class="mjh-sh-mf">免费</span>
             </div>
             <div class="mjh-sh-au">
-                <img src="../../images/mjh/sy-mjh_58.png" alt="" /><span>AUMAS</span>
+                <img src="images/mjh/sy-mjh_58.png" alt="" /><span>AUMAS</span>
             </div>
             <div class="mjh-sh-scdz">
-                <a href="##"><img src="../../images/mjh/sy-mjh_61.png" alt="" /><span>3452</span></a>
-                <a href="##"><img src="../../images/mjh/sy-mjh_63.png" alt="" /><span>3452</span></a>
+                <a href="##"><img src="images/mjh/sy-mjh_61.png" alt="" /><span>3452</span></a>
+                <a href="##"><img src="images/mjh/sy-mjh_63.png" alt="" /><span>3452</span></a>
             </div>
         </div>
         <div class="mjh-sh-qu">
-            <img src="../../images/mjh/sy-mjh_54.png" alt="" class="mjh-sh-fm" />
+            <img src="images/mjh/sy-mjh_54.png" alt="" class="mjh-sh-fm" />
             <p class="mjh-sh-smy">the three musketeers</p>
             <a href="##" class="mjh-sh-sm">三个火枪手是法国作家...</a>
             <span class="mjh-sh-wj">[已完结]</span>
@@ -63,11 +51,11 @@
                 <span class="mjh-sh-mf">免费</span>
             </div>
             <div class="mjh-sh-au">
-                <img src="../../images/mjh/sy-mjh_58.png" alt="" /><span>AUMAS</span>
+                <img src="images/mjh/sy-mjh_58.png" alt="" /><span>AUMAS</span>
             </div>
             <div class="mjh-sh-scdz">
-                <a href="##"><img src="../../images/mjh/sy-mjh_61.png" alt="" /><span>3452</span></a>
-                <a href="##"><img src="../../images/mjh/sy-mjh_63.png" alt="" /><span>3452</span></a>
+                <a href="##"><img src="images/mjh/sy-mjh_61.png" alt="" /><span>3452</span></a>
+                <a href="##"><img src="images/mjh/sy-mjh_63.png" alt="" /><span>3452</span></a>
             </div>
         </div>
     </div></div>
@@ -75,13 +63,13 @@
     <!-- 新书速递 -->
     <div class="mjh-sy-bt">
         <p class="mjh-sy-bty">NEW WORK PUSH</p>
-        <div><img src="../../images/mjh/sy-mjh_69.png" alt="" class="mjh-su-btt" /><span class="mjt-sy-bth">新书速递</span></div>
+        <div><img src="images/mjh/sy-mjh_69.png" alt="" class="mjh-su-btt" /><span class="mjt-sy-bth">新书速递</span></div>
         <a href="##" class="mjh-sy-btgd">更多</a>
     </div>
     <div class="mjh-xs-wkw">
     <div class="mjh-xs-wk">
         <div class="mjh-xs-qu">
-            <img src="../../images/mjh/sy-mjh_73.png" alt="" />
+            <img src="images/mjh/sy-mjh_73.png" alt="" />
             <div class="mjh-xs-quri">
                 <a href="##" class="mjh-xs-sm">我是小普通</a>
                 <p class="mjh-xs-au">味精SMG</p>
@@ -92,7 +80,7 @@
         </div>
 
         <div class="mjh-xs-qu">
-            <img src="../../images/mjh/sy-mjh_73.png" alt="" />
+            <img src="images/mjh/sy-mjh_73.png" alt="" />
             <div class="mjh-xs-quri">
                 <a href="##" class="mjh-xs-sm">我是小普通</a>
                 <p class="mjh-xs-au">味精SMG</p>
@@ -102,31 +90,3 @@
             </div>
         </div>
     </div></div>
-
-    <!-- 首页tab -->
-    <div class="mjh-sy-tab">
-        <a href="##" class="mjh-sy-tabt">
-            <img src="../../images/mjh/sy-mjh_83.png" alt="" />
-            <p>书架</p>
-        </a>
-        <a href="##" class="mjh-sy-tabt">
-            <img src="../../images/mjh/sy-mjh_86.png" alt="" />
-            <p>书库</p>
-        </a>
-        <a href="##" class="mjh-sy-tabt">
-            <img src="../../images/mjh/sy-mjh_77.png" alt="" />
-            <p>社区</p>
-        </a>
-        <a href="##" class="mjh-sy-tabt">
-            <img src="../../images/mjh/sy-mjh_80.png" alt="" />
-            <p>账户</p>
-        </a>
-    </div>
-</body>
-</html>
-<script type="text/javascript" src="../../js/rem.js"></script>
-<script type="text/javascript" src="../../js/zepto.js"></script>
-<script type="text/javascript" src="../../js/touch.js"></script>
-<script type="text/javascript"src="../../js/swiper-3.4.0.min.js"></script>
-<script type="text/javascript" src="../../js/index.js"></script>
-<script type="text/javascript" src="home.js"></script>
