--- a/pages/shequ/shequ.html
+++ b/pages/shequ/shequ.html
@@ -1,20 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" >
-    <title>爱阅读app</title>
-    <link rel="stylesheet" type="text/css" href="../../css/swiper-3.4.0.min.css" />
-    <link rel="stylesheet" type="text/css" href="../../css/normalize.css" />
-    <link rel="stylesheet" type="text/css" href="../../css/public.css"/>
-    <link rel="stylesheet" type="text/css" href="shequ.css" />
-</head>
-<body>
-    <div ng-view class="index_contain">
+
+    <div class="index_contain">
     <!-- 社区圈子开始 -->
         <!-- 圈子顶部栏开始 -->
         <div class="ld_sqtopbar">
-            <div class="ld_sq_photo"><img src="../../images/ld_images/ld_qz_photo.png" alt="" /></div>
+            <div class="ld_sq_photo"><img src="images/ld_images/ld_qz_photo.png" alt="" /></div>
            
             <ul class="ld_top_cen">
                 <li class="ld_sq_quanzi "><div class="ld_qz_wenzi">圈子</div></li>
@@ -26,11 +15,11 @@
         <!-- 社会圈子下面内容开始 -->
         <div class="ld_qz_condi">
                 <!-- 社会圈子 -->
-            <div class="ld_qz_con">
+            <!-- <div class="ld_qz_con">
                 <div class="ld_qz_contop">
-                    <img src="../../images/ld_images/ld_sq_lis01.png" alt="" />
+                    <img src="images/ld_images/ld_sq_lis01.png" alt="" />
                     <div class="ld_qz_label">
-                        <span><img src="../../images/ld_images/ld_qz_photo.png" alt="" /></span>
+                        <span><img src="images/ld_images/ld_qz_photo.png" alt="" /></span>
                         <ul class="ld_qz_labelcon"><li>软萌萌</li><li class="ld_qz_labelzan"><i></i>49</li></ul>
                     </div>
                 </div>
@@ -52,9 +41,9 @@
             </div>
             <div class="ld_qz_con">
                 <div class="ld_qz_contop">
-                    <img src="../../images/ld_images/ld_sq_lis01.png" alt="" />
+                    <img src="images/ld_images/ld_sq_lis01.png" alt="" />
                     <div class="ld_qz_label">
-                        <span><img src="../../images/ld_images/ld_qz_photo.png" alt="" /></span>
+                        <span><img src="images/ld_images/ld_qz_photo.png" alt="" /></span>
                         <ul class="ld_qz_labelcon"><li>软萌萌</li><li class="ld_qz_labelzan"><i></i>49</li></ul>
                     </div>
                 </div>
@@ -73,10 +62,10 @@
                         </ul>
                     </div>
                 </div>
-            </div>
+            </div> -->
                 <!-- 社会书友 -->
             <div class="ld_shuyou">
-                <div class="ld_sy_photo"><img src="../../images/ld_images/ld_photo01.png" alt="" /></div>
+                <div class="ld_sy_photo"><img src="images/ld_images/ld_photo01.png" alt="" /></div>
                 <ul class="ld_sy_add">
                     <li class="ld_sy_addtit">新增好友<span></span><span class="ld_sy_circle2"></span></li>
                     <li>查看我的新增好友信息</li>
@@ -84,7 +73,7 @@
                 <div class="ld_sy_num ld_sy_numactive">02</div>
             </div>
             <div class="ld_shuyou">
-                <div class="ld_sy_photo"><img src="../../images/ld_images/ld_photo01.png" alt="" /></div>
+                <div class="ld_sy_photo"><img src="images/ld_images/ld_photo01.png" alt="" /></div>
                 <ul class="ld_sy_add">
                     <li class="ld_sy_addtit">新增好友<span></span><span class="ld_sy_circle2"></span></li>
                     <li>查看我的新增好友信息</li>
@@ -99,7 +88,7 @@
             <div class="ld_sy_letter"><span>A.</span><span class="ld_sy_ltnum">34</span></div>
             <div class="ld_friend_di">
                 <div class="ld_friend">
-                    <div class="ld_friend_photo"><div class="ld_friend_inner"><img src="../../images/ld_images/ld_qz_photo.png" height="97" width="109" alt="" /></div></div>
+                    <div class="ld_friend_photo"><div class="ld_friend_inner"><img src="images/ld_images/ld_qz_photo.png" height="97" width="109" alt="" /></div></div>
                     <ul class="ld_friend_con">
                         <li class="ld_friend_tit">Aim·<b>Green</b><div class="ld_star"><span></span><span></span><span></span></div><i class="ld_vip">vip</i></li>
                         <li>撸啊撸啊德玛西亚</li>
@@ -141,11 +130,3 @@
         <!-- 社会圈子下面内容结束 -->
     <!-- 社区圈子结束 -->
     </div>
-</body>
-</html>
-<script src="../../js/angular.min.js"></script>
-<script src="../../js/angular-route.min.js"></script>
-<script type="text/javascript" src="../../js/rem.js"></script>
-<script type="text/javascript"src="../../js/swiper-3.4.0.min.js"></script>
-<script type="text/javascript" src="../../js/zepto.js"></script>
-<script type="text/javascript" src="../../index.js"></script>
