--- a/pages/shujia/shujia.html
+++ b/pages/shujia/shujia.html
@@ -1,14 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta name="viewport" content="width=device-width,initial-scale=1" >
-    <meta charset="UTF-8" />
-    <title>书架</title>
-    <link rel="stylesheet" type="text/css" href="../../css/normalize.css" />
-    <link rel="stylesheet" type="text/css" href="../../css/public.css" />
-    <link rel="stylesheet" type="text/css" href="shujia.css" />
-</head>
-<body>
+
     <!-- 书架-发现 开始-->
     <div class="zlf_container" hidden>
         <!-- 头 开始 -->
@@ -21,7 +11,7 @@
             <div class="zlf_find_title">
                 开始滑动发现你所喜欢的
             </div>
-            <img class="zlf_find_tu" src="../../images/zlf_images/zlf_find.png"  alt="" />
+            <img class="zlf_find_tu" src="images/zlf_images/zlf_find.png"  alt="" />
         </div>
         <!-- find 结束 -->
         <!-- swiper 开始 -->
@@ -29,62 +19,62 @@
           <div class="swiper-wrapper">
             <div class="swiper-slide zlf_item">
                 <div class="zlf_cover">
-                    <img class="zlf_book1"src="../../images/zlf_images/zlf_book.png" alt="" />
+                    <img class="zlf_book1"src="images/zlf_images/zlf_book.png" alt="" />
                     <!-- 头像 -->
                     <div class="zlf_photo">
-                        <img src="../../images/zlf_images/zlf_book.png">
+                        <img src="images/zlf_images/zlf_book.png">
                     </div>
                     <!-- 姓名 -->
                     <span class="zlf_name">JimGreen</span>
                     <!-- 点 -->
                     <div class="zlf_dian_box">
-                        <img class="zlf_dian"src="../../images/zlf_images/zlf_dian.png" alt="" />
+                        <img class="zlf_dian"src="images/zlf_images/zlf_dian.png" alt="" />
                     </div>
                     <!-- 五角星 -->
                     <div class="zlf_xing_box">
-                        <img src="../../images/zlf_images/zlf_xing.png" alt="" />
-                        <img src="../../images/zlf_images/zlf_xing.png" alt="" />
-                        <img src="../../images/zlf_images/zlf_xing.png" alt="" />
-                        <img src="../../images/zlf_images/zlf_xing.png" alt="" />
+                        <img src="images/zlf_images/zlf_xing.png" alt="" />
+                        <img src="images/zlf_images/zlf_xing.png" alt="" />
+                        <img src="images/zlf_images/zlf_xing.png" alt="" />
+                        <img src="images/zlf_images/zlf_xing.png" alt="" />
                     </div>
                     <!-- 火 -->
                     <div class="zlf_huo_box">
-                        <img src="../../images/zlf_images/zlf_huo.png" alt="" />
+                        <img src="images/zlf_images/zlf_huo.png" alt="" />
                         <i>388</i>
                     </div>
                 </div>
                 <div class="zlf_msg">
                     <div class="zlf_time_box">
-                        <img class="zlf_time_tu" src="../../images/zlf_images/zlf_sj.png" alt="" />
-                        <span>2016/12/29</span>
+                        <img class="zlf_time_tu" src="images/zlf_images/zlf_sj.png" alt="" />
+                        <span>2029</span>
                     </div>
                     <div class="zlf_tuijian_box">
                         <span class="zlf_span zlf_span1">GENTL</span>
                         <span class="zlf_span zlf_span2">YTOUCH</span>
-                        <img class="zlf_tuijian_tu" src="../../images/zlf_images/zlf_tuijian.png" alt="" />
+                        <img class="zlf_tuijian_tu" src="images/zlf_images/zlf_tuijian.png" alt="" />
                     </div>
                     <div class="zlf_line"></div>
                     <p class="zlf_dec">
                         卡就废了大家佛奥及覅偶将诶欧方佳偶的假发讲课了解放路看房卡大富科技...
                     </p>
                     <div class="zlf_time_box">
-                        <img class="zlf_time_tu" src="../../images/zlf_images/zlf_dizhi.png" alt="" />
+                        <img class="zlf_time_tu" src="images/zlf_images/zlf_dizhi.png" alt="" />
                         <span class="zlf_address">美国·纽约</span>
                     </div>
                     <div class="zlf_people zlf_people1">
-                        <img src="../../images/mjh/sy-mjh_54.png" alt="" />
+                        <img src="images/mjh/sy-mjh_54.png" alt="" />
                     </div>
                     <div class="zlf_people zlf_people2">
-                        <img src="../../images/mjh/sy-mjh_73.png" alt="" />
+                        <img src="images/mjh/sy-mjh_73.png" alt="" />
                     </div>
                      <div class="zlf_people zlf_people3">
-                        <img src="../../images/mjh/sy-mjh_54.png" alt="" />
+                        <img src="images/mjh/sy-mjh_54.png" alt="" />
                     </div>
                     <div class="zlf_people zlf_people4">
-                        <img src="../../images/mjh/sy-mjh_73.png" alt="" />
+                        <img src="images/mjh/sy-mjh_73.png" alt="" />
                     </div>
                     <div class="zlf_people zlf_people5">
-                        <img src="../../images/mjh/sy-mjh_54.png" alt="" />
+                        <img src="images/mjh/sy-mjh_54.png" alt="" />
                     </div>
                     <div class="zlf_people zlf_people6">
                        +46
@@ -101,7 +91,7 @@
         <div class="zlf_book_box">
             <div class="zlf_book_item">
                 <div class="zlf_book">
-                    <img src="../../images/mjh/sy-mjh_27.png" alt="" />
+                    <img src="images/mjh/sy-mjh_27.png" alt="" />
                     <div class="zlf_yuan zlf_yuan1"></div>
                     <div class="zlf_yuan zlf_yuan2"></div>
                 </div>
@@ -115,34 +105,35 @@
                     <div class="zlf_wjx">
                         <!-- 五角星 -->
                         <div class="zlf_x_box">
-                            <img src="../../images/mjh/sy-mjh_31.png" alt="" />
-                            <img src="../../images/mjh/sy-mjh_31.png" alt="" />
-                            <img src="../../images/mjh/sy-mjh_31.png" alt="" />
-                            <img src="../../images/mjh/sy-mjh_31.png" alt="" />
+                            <img src="images/mjh/sy-mjh_31.png" alt="" />
+                            <img src="images/mjh/sy-mjh_31.png" alt="" />
+                            <img src="images/mjh/sy-mjh_31.png" alt="" />
+                            <img src="images/mjh/sy-mjh_31.png" alt="" />
+                            <img src="images/mjh/sy-mjh_31.png" alt="" />
                         </div>
                         <div class="zlf_author">
                             DUMAS
                         </div>
                     </div>
                     <div class="zlf_bg">
-                        <img class="zlf_bg_tu" src="../../images/zlf_images/zlf_bg.png" alt="" />
+                        <img class="zlf_bg_tu" src="images/zlf_images/zlf_bg.png" alt="" />
                         <div class="zlf_sc">
-                            <img src="../../images/mjh/sy-mjh_35.png" height="19" width="20" alt="" />
+                            <img src="images/mjh/sy-mjh_35.png" height="19" width="20" alt="" />
                         </div>
                         <div class="zlf_gz">
-                            <img src="../../images/mjh/sy-mjh_38.png" height="19" width="20" alt="" />
-                            <span>23</span>
+                            <img src="images/mjh/sy-mjh_38.png" height="19" width="20" alt="" />
+                            <span>234</span>
                         </div>
                         <div class="zlf_dz">
-                            <img src="../../images/mjh/sy-mjh_40.png" height="19" width="20" alt="" />
-                            <span>66</span>
+                            <img src="images/mjh/sy-mjh_40.png" height="19" width="20" alt="" />
+                            <span>666</span>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="zlf_book_item">
                 <div class="zlf_book">
-                    <img src="../../images/mjh/sy-mjh_27.png" alt="" />
+                    <img src="images/mjh/sy-mjh_27.png" alt="" />
                     <div class="zlf_yuan zlf_yuan1"></div>
                     <div class="zlf_yuan zlf_yuan2"></div>
                 </div>
@@ -156,34 +147,35 @@
                     <div class="zlf_wjx">
                         <!-- 五角星 -->
                         <div class="zlf_x_box">
-                            <img src="../../images/mjh/sy-mjh_31.png" alt="" />
-                            <img src="../../images/mjh/sy-mjh_31.png" alt="" />
-                            <img src="../../images/mjh/sy-mjh_31.png" alt="" />
-                            <img src="../../images/mjh/sy-mjh_31.png" alt="" />
+                            <img src="images/mjh/sy-mjh_31.png" alt="" />
+                            <img src="images/mjh/sy-mjh_31.png" alt="" />
+                            <img src="images/mjh/sy-mjh_31.png" alt="" />
+                            <img src="images/mjh/sy-mjh_31.png" alt="" />
+                            <img src="images/mjh/sy-mjh_31.png" alt="" />
                         </div>
                         <div class="zlf_author">
                             DUMAS
                         </div>
                     </div>
                     <div class="zlf_bg">
-                        <img class="zlf_bg_tu" src="../../images/zlf_images/zlf_bg.png" alt="" />
+                        <img class="zlf_bg_tu" src="images/zlf_images/zlf_bg.png" alt="" />
                         <div class="zlf_sc">
-                            <img src="../../images/mjh/sy-mjh_35.png" height="19" width="20" alt="" />
+                            <img src="images/mjh/sy-mjh_35.png" height="19" width="20" alt="" />
                         </div>
                         <div class="zlf_gz">
-                            <img src="../../images/mjh/sy-mjh_38.png" height="19" width="20" alt="" />
-                            <span>23</span>
+                            <img src="images/mjh/sy-mjh_38.png" height="19" width="20" alt="" />
+                            <span>234</span>
                         </div>
                         <div class="zlf_dz">
-                            <img src="../../images/mjh/sy-mjh_40.png" height="19" width="20" alt="" />
-                            <span>66</span>
+                            <img src="images/mjh/sy-mjh_40.png" height="19" width="20" alt="" />
+                            <span>666</span>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="zlf_book_item">
                 <div class="zlf_book">
-                    <img src="../../images/mjh/sy-mjh_27.png" alt="" />
+                    <img src="images/mjh/sy-mjh_27.png" alt="" />
                     <div class="zlf_yuan zlf_yuan1"></div>
                     <div class="zlf_yuan zlf_yuan2"></div>
                 </div>
@@ -197,27 +189,28 @@
                     <div class="zlf_wjx">
                         <!-- 五角星 -->
                         <div class="zlf_x_box">
-                            <img src="../../images/mjh/sy-mjh_31.png" alt="" />
-                            <img src="../../images/mjh/sy-mjh_31.png" alt="" />
-                            <img src="../../images/mjh/sy-mjh_31.png" alt="" />
-                            <img src="../../images/mjh/sy-mjh_31.png" alt="" />
+                            <img src="images/mjh/sy-mjh_31.png" alt="" />
+                            <img src="images/mjh/sy-mjh_31.png" alt="" />
+                            <img src="images/mjh/sy-mjh_31.png" alt="" />
+                            <img src="images/mjh/sy-mjh_31.png" alt="" />
+                            <img src="images/mjh/sy-mjh_31.png" alt="" />
                         </div>
                         <div class="zlf_author">
                             DUMAS
                         </div>
                     </div>
                     <div class="zlf_bg">
-                        <img class="zlf_bg_tu" src="../../images/zlf_images/zlf_bg.png" alt="" />
+                        <img class="zlf_bg_tu" src="images/zlf_images/zlf_bg.png" alt="" />
                         <div class="zlf_sc">
-                            <img src="../../images/mjh/sy-mjh_35.png" height="19" width="20" alt="" />
+                            <img src="images/mjh/sy-mjh_35.png" height="19" width="20" alt="" />
                         </div>
                         <div class="zlf_gz">
-                            <img src="../../images/mjh/sy-mjh_38.png" height="19" width="20" alt="" />
-                            <span>23</span>
+                            <img src="images/mjh/sy-mjh_38.png" height="19" width="20" alt="" />
+                            <span>234</span>
                         </div>
                         <div class="zlf_dz">
-                            <img src="../../images/mjh/sy-mjh_40.png" height="19" width="20" alt="" />
-                            <span>66</span>
+                            <img src="images/mjh/sy-mjh_40.png" height="19" width="20" alt="" />
+                            <span>666</span>
                         </div>
                     </div>
                 </div>
@@ -228,16 +221,11 @@
             <div class="zlf_English">STACK_ROOM</div>
             <div class="zlf_Chinese">想看新书了，去逛逛看</div>
             <div class="zlf_close_btn">
-                <img src="../../images/zlf_images/zlf_close.png" alt="" />
+                <img src="images/zlf_images/zlf_close.png" alt="" />
             </div>
             <div class="zlf_go">
-                <img src="../../images/zlf_images/zlf_go.png" alt="" />
+                <img src="images/zlf_images/zlf_go.png" alt="" />
             </div>
         </div>
     </div>
     <!-- 书架-收藏 结束-->
-</body>
-<script type="text/javascript" src="../../js/rem.js"></script>
-<script type="text/javascript" src="../../js/zepto.js"></script>
-<script type="text/javascript" src="shujia.js"></script>
-</html>
