--- a/pages/login/login-mjh/login_mjh.html
+++ b/pages/login/login-mjh/login_mjh.html
@@ -15,7 +15,36 @@
         <img src="../../../images/yhp_images/yhp_backbtn.png" alt="" class="mjh-dl-fh" />
         <img src="../../../images/yhp_images/yhp_loginup.png" alt="" class="mjh-dl-bg1" />
         <img src="../../../images/yhp_images/yhp_loginbottom.png" alt="" class="mjh-dl-bg2" />
+        
+        <div class="mjh-dlk">
+            <div class="mjh-dl-tx" style="background:url(../../../images/yhp_images/yhp_loginheader.png) no-repeat center center/cover;"></div>
+            
+            <img src="../../../images/yhp_images/yhp_user.png" alt="" class="mjh-dl-yht" />
+            <img src="../../../images/yhp_images/yhp_pass.png" alt="" class="mjh-dl-mmt" />
+            <input type="text" class="mjh-dl-yhm" placeholder='请输入账号'/>
+            <input type="password" class="mjh-dl-mm" placeholder='请输入密码'/>
+            <div class="mjh-dl-mmc">
+                <input type="checkbox"/>记住密码
+                <input type="button" value='找回密码'>
+            </div>
+            <div class="mjh-sl-sub active" >  
+            </div>
+            <div class="mjh-dl-ts">
+                <div class="mjh-ts-zs1"></div>
+                <div class="mjh-ts-zs2"></div>
+                <div class="mjh-ts-ts">当前密码不正确</div>
+                <div class="mjh-ts-zs2"></div>
+                <div class="mjh-ts-zs1"></div>
+            </div>
 
+            <p class="mjh-dl-sfdl">第三方登录</p>
+            <div class="mjh-dl-sftb">
+                <a href="##"><img src="../../../images/yhp_images/yhp_qq.png" alt="" /></a>
+                <a href="##"><img src="../../../images/yhp_images/yhp_tweet.png" alt="" /></a>
+                <a href="##"><img src="../../../images/yhp_images/yhp_chat.png" alt="" /></a>
+            </div>
+
+        </div>
     </div>
 </body>
 </html>
